--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "homepage": "https://rossh2905.com/react-portfolio/portfolio",
+    "homepage": "http://ubaimutl.github.io/react-portfolio",
     "name": "react-portfolio",
     "version": "0.1.0",
     "private": true,
